--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,5 @@
 application {
   data-input-path: "/some/input/path"
   data-output-path: "/some/output/path"
+  check-point-path: "/check-point/mount-path"
 }
